# youtube_download

./: .buildinfo  .gitignore  LICENSE  README.md  config.cfg.example  environment.yml  genindex.html  index.html  main.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  utils.html
.github/workflows/: doc.yml  lint.yml  tests.yml
_sources/: index.rst.txt  main.rst.txt  utils.rst.txt
docs/doc/: __main__.rst  conf.py  index.rst  utils.rst
docs/source/: conf.py
src/youtube_download/: __init__.py  __main__.py
src/youtube_download/config/: config.cfg
tests/: conftest.py
tests/unit/: test_utils.py
