[tool.poetry]
name = "youtube_download"
version = "0.1.0"
description = "Python package to download youtube music from a list of urls."
authors = ["Matthieu Daviaud <matthieu.daviaud@gmail.com"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mattdav/youtube_download"
repository = "https://github.com/mattdav/youtube_download"
keywords = ["youtube_download"]

[tool.poetry.dependencies]
python = "^3.9"
youtube_dl = "^2021.12.17"
pyforest = "^1.1.0"
flake8 = "^4.0.1"
black = "^22.1.0"
importlib = "^1.0.4"
configparser = "^5.2.0"
Sphinx = "^4.5.0"
sphinx-rtd-theme = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
