[project]
name = "youtube-download"
version = "0.2.0"
description = "Python package to download youtube music from a list of urls."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beartype>=0.22.6",
    "pytest>=9.0.1",
    "ruff>=0.14.7",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
    "tk>=0.1.0",
    "yt-dlp>=2025.11.12",
]
